tests/files/parser_tests/should_fail/078.cmdr
//Should not parse ternary expression
x = (true ? x) : y);